Find the CppUTest installed on my Mac from pkgsrc.

--- a/C/Makefile
+++ b/C/Makefile
@@ -11,7 +11,7 @@
 
 # Points to the root of CppUTest, relative to where this file is.
 # Remember to tweak this if you move this file.
-CPPUTEST_HOME = CppUTest
+CPPUTEST_HOME = /opt/pkg
 
 # Where to find user code.
 USER_DIR = .
@@ -46,6 +46,7 @@ GildedRoseTextTests : GildedRoseTextTests.o GildedRose.o
 
 clean :
 	rm -f $(TESTS) $(TEXTTESTS) *.o *~
+	rm -rf *.dSYM
 
 check-syntax:
 	gcc $(CPPFLAGS) -o /dev/null -S ${CHK_SOURCES}
